-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 8.0.0-rc1, Qt Creator 8.0.0
-
None
-
-
b54bf8ad86 (qt-creator/qt-creator/7.0) b54bf8ad86 (qt-creator/qt-creator/master) b54bf8ad86 (qt-creator/qt-creator/qds-3.3) b54bf8ad86 (qt-creator/tqtc-qt-creator/7.0) b2af450cdb (qt-creator/qt-creator/8.0) b2af450cdb (qt-creator/qt-creator/master)
Out-of-the box, lldb fails to launch because it can't find libpython.
- relates to
-
QTCREATORBUG-27860 AnalogClock example C++ debug does not work with LLDB on Android target
-
- Reported
-
- resulted in
-
QTCREATORBUG-27388 Android debugging, NDK 23: lldb 12 does an "INFERIOR SPONTANEOUS STOP"
-
- Closed
-